gitops/dev/mrt-mongodb.yaml
apiVersion: v1
kind: List
items:

- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"mongodb","app.kubernetes.io/instance":"dev"},"name":"mongodb","namespace":"mrt"},"spec":{"ports":[{"name":"27017-tcp","port":27017,"protocol":"TCP","targetPort":27017}],"selector":{"deployment":"mongodb"}}}
    labels:
      app: mongodb
      app.kubernetes.io/instance: dev
    name: mongodb
    namespace: mrt
  spec:
    ports:
    - name: 27017-tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      deployment: mongodb

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mongodb:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mongodb\")].image"}]'
    labels:
      app: mongodb
      app.kubernetes.io/instance: dev
    name: mongodb
    namespace: mrt
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: mongodb
    template:
      metadata:
        labels:
          deployment: mongodb
      spec:
        containers:
        - env:
          - name: MONGODB_ADMIN_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: admin-password
                name: mongodb-credentials
          - name: MONGODB_DATABASE
            valueFrom:
              configMapKeyRef:
                key: database
                name: mongodb-credentials
          - name: MONGODB_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: password
                name: mongodb-credentials
          - name: MONGODB_USER
            valueFrom:
              configMapKeyRef:
                key: user
                name: mongodb-credentials
          image: registry.access.redhat.com/rhscl/mongodb-36-rhel7@sha256:8dc9932eabd30f2ee4d0b882500c65b48f3c2fbbd85bfd51d0d18410af404a39
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongodb-volume
        volumes:
        - persistentVolumeClaim:
            claimName: mongodb-pvc
          name: mongodb-volume

- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"image.openshift.io/v1","kind":"ImageStream","metadata":{"annotations":{},"labels":{"app":"mongodb","app.kubernetes.io/instance":"dev"},"name":"mongodb","namespace":"mrt"},"spec":{"tags":[{"annotations":{"openshift.io/imported-from":"registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest"},"from":{"kind":"DockerImage","name":"registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest"},"name":"latest","referencePolicy":{"type":"Source"}}]}}
    labels:
      app: mongodb
      app.kubernetes.io/instance: dev
    name: mongodb
    namespace: mrt
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest
      from:
        kind: DockerImage
        name: registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest
      name: latest

- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: mongodb-pvc
    namespace: mrt
    labels:
      app: mongodb
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
