gitops/dev/mrt-resources.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mongodb:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mongodb\")].image"}]'
    labels:
      app: mongodb
    name: mongodb
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: mongodb
    template:
      metadata:
        labels:
          deployment: mongodb
      spec:
        containers:
        - env:
          - name: MONGODB_ADMIN_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: admin-password
                name: mongodb-credentials
          - name: MONGODB_DATABASE
            valueFrom:
              configMapKeyRef:
                key: database
                name: mongodb-credentials
          - name: MONGODB_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: password
                name: mongodb-credentials
          - name: MONGODB_USER
            valueFrom:
              configMapKeyRef:
                key: user
                name: mongodb-credentials
          image: registry.access.redhat.com/rhscl/mongodb-36-rhel7@sha256:8dc9932eabd30f2ee4d0b882500c65b48f3c2fbbd85bfd51d0d18410af404a39
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongodb-volume-1
        volumes:
        - emptyDir: {}
          name: mongodb-volume-1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mrt-backend:v0.1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mrt-backend\")].image"}]'
    labels:
      app: mrt-backend
    name: mrt-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: mrt-backend
    template:
      metadata:
        labels:
          deployment: mrt-backend
      spec:
        containers:
        - env:
          - name: AUTH_SECRET
            valueFrom:
              configMapKeyRef:
                key: secret
                name: auth-server
          - name: AUTH_SERVER_URL
            valueFrom:
              configMapKeyRef:
                key: server-url
                name: auth-server
          - name: MONGODB_USER
            valueFrom:
              configMapKeyRef:
                key: user
                name: mongodb-credentials
          - name: MONGODB_ADMIN_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: admin-password
                name: mongodb-credentials
          - name: MONGODB_DATABASE
            valueFrom:
              configMapKeyRef:
                key: database
                name: mongodb-credentials
          - name: MONGODB_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: password
                name: mongodb-credentials
          - name: GOOGLE_KEY
            valueFrom:
              secretKeyRef:
                key: google-key
                name: google-key
          image: quay.io/vsantoma/mrt-backend@sha256:6c7f809bd4729c4be40e488ae47151d12f7e7ff8a9f808d7b9ff4285afff1e65
          name: mrt-backend
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          volumeMounts:
          - mountPath: /reports
            name: volume-tn67r
        volumes:
        - emptyDir: {}
          name: volume-tn67r
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: mongodb
    name: mongodb
  spec:
    ports:
    - name: 27017-tcp
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      deployment: mongodb
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: mrt-backend
    name: mrt-backend
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      deployment: mrt-backend
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: mrt-backend
    name: mrt-backend
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mrt-backend
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: mongodb
    name: mongodb
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest
      from:
        kind: DockerImage
        name: registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest
      name: latest
      referencePolicy:
        type: Source
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: mrt-backend
    name: mrt-backend
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/vsantoma/mrt-backend:v0.1
      from:
        kind: DockerImage
        name: quay.io/vsantoma/mrt-backend:v0.1
      name: v0.1
      referencePolicy:
        type: Source
kind: List
