gitops/dev/mrt-routes.yaml
apiVersion: v1
kind: List
items:

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: mrt
    name: mrt
    namespace: mrt
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mrt-frontend
    host: mrt.apps.playground.rhocplab.com
